--- a/apps/frontend/src/app/global.css
+++ b/apps/frontend/src/app/global.css
@@ -11,11 +11,6 @@
     @apply bg-background text-foreground;
   }
 
-  a {
-    @apply text-primary;
-    @apply cursor-pointer;
-  }
-
   :root {
     --background: 220 40% 98%;
     --foreground: 213deg 5% 8%;
@@ -39,6 +34,12 @@
     --radius: 0.5rem;
     --cover: 220 80% 67%;
     --cover-foreground: 210 40% 98%;
+
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
   }
 
   .dark {
@@ -54,7 +55,7 @@
     --secondary-foreground: 0 0% 98%;
     --muted: 228 11% 12%;
     --muted-foreground: 216 0% 68%;
-    --accent: 228 11% 14%;
+    --accent: 225 10% 10%;
     --accent-foreground: 0 0% 98%;
     --destructive: 359 78% 55%;
     --destructive-foreground: 210 40% 98%;
@@ -63,10 +64,16 @@
     /* --ring: var(--primary); */
     --cover: 216 64% 39%;
     --cover-foreground: 210 40% 98%;
+
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
   }
 }
 
-@layer utilities {
+@layer components {
   .underline-strike-through {
     text-decoration: underline line-through;
   }
